BUG fix: overview align thing

--- a/website/src/component/TripOverview/TripOverviewCity/index.sass
+++ b/website/src/component/TripOverview/TripOverviewCity/index.sass
@@ -1,9 +1,10 @@
 .trip-overview-day
     min-width: 100px
+    padding-right: 0px
     position: relative
     display: flex
     flex-direction: column
-    padding-right: 0px
+    justify-content: center
     align-items: center
     .trip-overview-day-daydisplay
         font-size: 24px
