--- a/website/src/component/TripOverview/index.sass
+++ b/website/src/component/TripOverview/index.sass
@@ -25,7 +25,7 @@
             top: 36%
             left: 10%
             display: flex
-            flex-direction: row
             background: #ffffff
-            align-items: center
+            flex-direction: row
+            align-items: flex-start
             justify-content: center
